Bug 324567 - Start chat does not check contact supports text chats before starting a channel
Summary: Start chat does not check contact supports text chats before starting a channel
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-05 19:23 UTC by Anant Kamath
Modified: 2013-11-13 10:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anant Kamath 2013-09-05 19:23:28 UTC
When entering an invalid contact id, using 'Start a chat' from contactlist, an error dialog is correctly shown but text-ui starts up anyway.

Reproducible: Always

Steps to Reproduce:
1. Enter an invalid contact-id/ screen name in the Start a chat dialog (for example a name without the trailing @gmail.com for google talk) in contactlist and click OK

Actual Results:  
text-ui starts up showing a grey window.

Expected Results:  
text-ui should not start up.
Comment 1 David Edmundson 2013-09-05 19:40:04 UTC
We made it load the window immediately before it loads the channel in order to make it appear to load faster.  I don't really want to remove that.

The alternate way we can fix this is to check the contact supports Text channels before invoking the channel. ktp-dial-out-ui does that I think.
Comment 2 Martin Klapetek 2013-09-06 11:19:46 UTC
Showing nothing is imho not good - you start an action and nothing is happening, but from user's pov.

We could either verify the text channel capability before we delegate the action or after text-ui has been started (better I think). Then display a message box saying "Sorry, can't chat with this contact" and in case of text-ui, close it immediately after the message box has been closed.
Comment 3 David Edmundson 2013-11-13 09:48:10 UTC
Renaming to "check before starting a text chat" and confirming.