Check for contact's text capabilities before starting a chat

Reviewed-by: David Edmundson
BUG: 324567